Fix component aligment for mobile and desk, change alignment according to parent components: home, products page or shopping cart

--- a/src/components/ProductDescription/ProductDescription.scss
+++ b/src/components/ProductDescription/ProductDescription.scss
@@ -1,26 +1,90 @@
 @import "src/base-styles/dependencies";
 
+span{
+    display: inline-block;
+}
+
+p{
+    margin-top: 0;
+    
+}
+
 .productDescription {
-    &__pricing{
-        line-height: 1em;
-        font-size: 0.875em;
-        display: flex;
-        justify-content: flex-start;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    &.isInsideHome{
+        .productDescription__pricing-group{
+            display: flex;
+        }
+    }
+    &.isInsideProduct{
+        .productDescription{
+            &__name{
+                margin-bottom: 12.2px;
+                font-size: 16px;
+            }
+            &__pricing-group{
+                display: flex;
+                flex-direction: column;
+            }
+            &__actual{
+                margin-bottom: 11px;
+                font-size: 16px;
+            }
+        }
+    }
+    &.isInsideCart{
+        .productDescription{
+            &__actual{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            &__price--actual{
+                margin-bottom: 11px;
+                font-size: 16px;
+            }
+        }
+        @media (min-width: $lg){
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+    }
+    &__pricing-group, &__name{
+        line-height: 16px;
+        font-size: 14px;
     }
     &__name{
         font-family: $roboto;
         font-weight: 400;
         margin-bottom: 0.5em;
     }
+
+    &__reg{
+        display: flex;
+        justify-content: flex-start;
+    }
     &__price{
         font-weight: 400;
         &--reg{
             text-decoration: line-through;
             color: $color-icon;
+            display: flex;
+            justify-content: flex-start;
         }
         &--actual{
             font-weight: 700;
             margin-right: 0.562em;
         }
+    }
+    &__installments{
+        color: $secondary
+    }
+    &__discount-percent{
+        color: $color-icon;
+        margin-left: 0.5em;
     }
 }
